[gd_scene load_steps=2 format=3 uid="uid://bx3qrm5p8wk3h"]

[ext_resource type="Script" path="res://scripts/debug_menu.gd" id="1_debug"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_debug")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 400.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "DEBUG MENU (F3)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SpawnBotButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Spawn Bot"

[node name="GodModeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "God Mode: OFF"

[node name="MaxLevelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Max Level"

[node name="TeleportButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Teleport"

[node name="ClearAbilitiesButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Clear Abilities"

[node name="SpawnAbilityButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Spawn Random Ability"

[node name="KillPlayerButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Kill Player (Respawn)"

[node name="AddScoreButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Add 5 Score"

[node name="ResetTimerButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Reset Match Timer"

[node name="CollisionShapesButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Show Collision: OFF"

[node name="RegenerateLevelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Regenerate Level"

[node name="ChangeSkyboxButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Change Skybox Colors"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SpeedMultiplier" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SpeedMultiplier"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed: 1.0x"

[node name="Slider" type="HSlider" parent="Panel/VBoxContainer/SpeedMultiplier"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0
